[package]
name = "mastodon-block-enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
hex = { version = "0.4", features = ["serde"] }
rayon = "1.7"
reqwest = { version = "0.11", features = ["native-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.28", features = ["rt"] }
